Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-3384

DRS-level scan optimization leads to failed scans

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.17.0
    • 1.17.0
    • tserver
    • None

    Description

      Recently, a new DRS-level optimization for scan operations has been introduced with changelist 936d7edc4.

      The newly introduced DRS-level optimization leads to scan failures when all of the following turns true:

      • all the primary key columns are of integer types
      • the table has no hash partitioning
      • the table contains a row with all primary key columns set to INT{x}_MAX correspondingly
      • the scan request is to scan all the table's data

      I suspect that some of the conditions above might be relaxed, but I have a test case that reproduces the issue as described.  See this gerrit review item for the reproduction scenario.

      Attachments

        Issue Links

          Activity

            People

              zhangyifan27 YifanZhang
              aserbin Alexey Serbin
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: